Revert "some strings count realisation"

--- a/assets/styles/scss/pages/search.css
+++ b/assets/styles/scss/pages/search.css
@@ -65,12 +65,10 @@
     transform: rotate(360deg);
   }
 }
-.delete-column,
-.delete-column2 {
+.delete-column {
   border: 0px;
   cursor: pointer;
   display: flex;
   align-items: center;
   margin-left: 0px;
-  background-color: white;
 }/*# sourceMappingURL=search.css.map */
