--- a/assets/styles/scss/pages/search.scss
+++ b/assets/styles/scss/pages/search.scss
@@ -34,16 +34,11 @@
   max-width: 100%;
   height: 70px;
   padding-left: 30px;
-  padding-right: 10px;
   justify-content: space-between;
   background-color: white;
   position: sticky;
 }
 
-.search-result {
-  width: 60%;
-
-}
 
 .inputStyle {
   background-color: white;
@@ -51,8 +46,9 @@
   width: 100px;
   height: 40px;
   border-radius: 10px;
-  margin-left: 25%;
+  margin-left: 10%;
   text-align: center;
+  justify-content: flex-end;
 }
 
 #diary-loader {
@@ -78,7 +74,10 @@
 }
 
 .delete-column,
-.delete-column2 {
+.delete-column2,
+.delete-column3,
+.delete-column4
+ {
   border: 0px;
   cursor: pointer;
   display: flex;
