--- a/assets/styles/scss/pages/search.css
+++ b/assets/styles/scss/pages/search.css
@@ -66,7 +66,9 @@
   }
 }
 .delete-column,
-.delete-column2 {
+.delete-column2,
+.delete-column3,
+.delete-column4 {
   border: 0px;
   cursor: pointer;
   display: flex;
