--- a/assets/styles/scss/pages/search.scss
+++ b/assets/styles/scss/pages/search.scss
@@ -27,27 +27,28 @@
    
 }
 .elem {
-    display:flex;
-    align-items: center;
-    max-width: 100%;
-    height:70px;
-    padding-left: 30px;
-    padding-right: 10px;
-    justify-content: space-between;
-    background-color: white; position: sticky;
+  display: flex;
+  align-items: center;
+  max-width: 100%;
+  height: 70px;
+  padding-left: 30px;
+  justify-content: space-between;
+  background-color: white;
+  position: sticky;
+}
+.inputStyle {
+  background-color: white;
+  border: 1px solid rgb(10, 155, 171);
+  width: 100px;
+  height: 40px;
+  border-radius: 10px;
+  margin-left: 10%;
+  text-align: center;
+  justify-content: flex-end;
 }
 .search-result {
     width: 60%;
     
-}
-.inputStyle {
-background-color: white;
-border: 1px solid rgb(10,155,171);
-width: 100px;
-height: 40px;
-border-radius: 10px;
-margin-left: 25%;
-text-align: center;
 }
 
 #diary-loader {
