--- a/assets/styles/scss/pages/search.css
+++ b/assets/styles/scss/pages/search.css
@@ -26,9 +26,15 @@
   max-width: 100%;
   height: 70px;
   padding-left: 30px;
+  padding-right: 10px;
   justify-content: space-between;
   background-color: white;
+  position: -webkit-sticky;
   position: sticky;
+}
+
+.search-result {
+  width: 60%;
 }
 
 .inputStyle {
@@ -37,13 +43,8 @@
   width: 100px;
   height: 40px;
   border-radius: 10px;
-  margin-left: 10%;
+  margin-left: 25%;
   text-align: center;
-  justify-content: flex-end;
-}
-
-.search-result {
-  width: 60%;
 }
 
 #diary-loader {
@@ -52,9 +53,19 @@
   border-radius: 50%;
   width: 40px;
   height: 40px;
-  animation: spin 2s linear infinite;
+  -webkit-animation: spin 2s linear infinite;
+          animation: spin 2s linear infinite;
   margin-left: 35vw;
   margin-top: 10px;
+}
+
+@-webkit-keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 @keyframes spin {
