--- a/assets/styles/scss/pages/search.css
+++ b/assets/styles/scss/pages/search.css
@@ -1,7 +1,4 @@
-.diary__form__search-1,
-.diary__form__search-2,
-.diary__form__search-3,
-.diary__form__search-4 {
+.diary__form__search-1, .diary__form__search-2, .diary__form__search-3, .diary__form__search-4 {
   max-width: 1101px;
   height: 35px;
   border-radius: 35px;
@@ -32,7 +29,6 @@
   padding-right: 10px;
   justify-content: space-between;
   background-color: white;
-  position: -webkit-sticky;
   position: sticky;
 }
 
@@ -56,39 +52,27 @@
   border-radius: 50%;
   width: 40px;
   height: 40px;
-  -webkit-animation: spin 2s linear infinite;
   animation: spin 2s linear infinite;
   margin-left: 35vw;
   margin-top: 10px;
-}
-
-@-webkit-keyframes spin {
-  0% {
-    transform: rotate(0deg);
-  }
-
-  100% {
-    transform: rotate(360deg);
-  }
 }
 
 @keyframes spin {
   0% {
     transform: rotate(0deg);
   }
-
   100% {
     transform: rotate(360deg);
   }
 }
-
 .delete-column,
-.delete-column2 {
+.delete-column2,
+.delete-column3,
+.delete-column4 {
   border: 0px;
   cursor: pointer;
   display: flex;
   align-items: center;
   margin-left: 0px;
-}
-
-/*# sourceMappingURL=search.css.map */
+  background-color: white;
+}/*# sourceMappingURL=search.css.map */
