--- a/assets/styles/scss/pages/search.scss
+++ b/assets/styles/scss/pages/search.scss
@@ -1,91 +1,78 @@
 @import "../layouts/variables.scss";
 
-.diary__form {
-
-  &__search-1,
-  &__search-2,
-  &__search-3,
-  &__search-4 {
-    max-width: 1101px;
-    height: 35px;
-    border-radius: 35px;
-    @include font (400, 20px);
-  }
+.diary__form{
+&__search-1,
+&__search-2,
+&__search-3,
+&__search-4
+{
+  max-width: 1101px;
+  height: 35px;
+  border-radius: 35px;
+  @include font (400, 20px);
 }
-
+}
 #diary-search-1,
 #diary-search-2,
 #diary-search-3,
-#diary-search-4 {
-  width: 100%;
-  height: 50px;
-  border-radius: 35px;
-  background: url(/assets/images/diary/diary-search.png) no-repeat 3px 3px;
-  background-color: rgb(246, 199, 142);
-  border: 0cm;
-  padding-left: 6%;
+#diary-search-4{
+    width: 100%;
+    height: 50px;
+    border-radius: 35px;
+    background: url(/assets/images/diary/diary-search.png) no-repeat 3px 3px;
+    background-color: rgb(246,199,142);
+    border: 0cm;
+    padding-left: 6%;
 
-
+   
 }
-
 .elem {
-  display: flex;
-  align-items: center;
-  max-width: 100%;
-  height: 70px;
-  padding-left: 30px;
-  padding-right: 10px;
-  justify-content: space-between;
-  background-color: white;
-  position: sticky;
+    display:flex;
+    align-items: center;
+    max-width: 100%;
+    height:70px;
+    padding-left: 30px;
+    padding-right: 10px;
+    justify-content: space-between;
+    background-color: white; position: sticky;
 }
-
 .search-result {
-  width: 60%;
-
+    width: 60%;
+    
 }
-
 .inputStyle {
-  background-color: white;
-  border: 1px solid rgb(10, 155, 171);
-  width: 100px;
-  height: 40px;
-  border-radius: 10px;
-  margin-left: 25%;
-  text-align: center;
+background-color: white;
+border: 1px solid rgb(10,155,171);
+width: 100px;
+height: 40px;
+border-radius: 10px;
+margin-left: 25%;
+text-align: center;
 }
 
 #diary-loader {
-
-  border: 4px solid #f3f3f3;
-  border-top: 4px solid rgb(101, 195, 205);
-  border-radius: 50%;
-  width: 40px;
-  height: 40px;
-  animation: spin 2s linear infinite;
-  margin-left: 35vw;
-  margin-top: 10px;
-}
-
-@keyframes spin {
-  0% {
-    transform: rotate(0deg);
+  
+    border: 4px solid #f3f3f3; 
+    border-top: 4px solid rgb(101,195,205);
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    animation: spin 2s linear infinite;
+    margin-left: 35vw;
+    margin-top: 10px; 
+  }
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
   }
 
-  100% {
-    transform: rotate(360deg);
+  .delete-column {
+    border: 0px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    margin-left: 0px;
+
   }
-}
 
-.delete-column,
-.delete-column2,
-.delete-column3,
-.delete-column4 {
-  border: 0px;
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-  margin-left: 0px;
-  background-color: white;
 
-}
