--- a/assets/styles/scss/main.css
+++ b/assets/styles/scss/main.css
@@ -911,10 +911,6 @@ body {
   background-color: #E4EEEE;
 }
 
-.diary-table-string-1__column-names {
-  width: 62%;
-}
-
 .diary-table-string-2 {
   width: 70%;
   font-size: 16px;
@@ -934,6 +930,10 @@ body {
   visibility: hidden;
   height: 0px;
   transition: 0.7s opacity, 0.55s visibility;
+}
+
+.diary-table-string__column-names {
+  align-items: center;
 }
 
 .diary-water-tracker {
