--- a/assets/styles/scss/pages/charts.css
+++ b/assets/styles/scss/pages/charts.css
@@ -1,5 +1,4 @@
 @charset "UTF-8";
-
 /* Настя Кольцова - начало */
 /* COMMON */
 @font-face {
@@ -435,33 +434,27 @@
     width: 75vw;
   }
 }
-
 @media screen and (min-width: 1921px) {
   .wrapper {
     width: 75vw;
   }
 }
-
 @media screen and (min-width: 2500px) {
   * {
     font-size: 1.2em;
   }
-
   .charts-body {
     max-width: 2500px;
   }
-
   .wrapper {
     max-width: 2500px;
   }
-
   .charts-main {
     width: 65vw;
     height: 100vh;
     margin-left: 15vw;
     margin-right: 15vw;
   }
-
   .charts-title {
     width: 50%;
     height: 40%;
@@ -472,23 +465,19 @@
     padding: 2% 2% 1%;
     border-radius: 30px;
   }
-
   .charts-title > p {
-    font-size: 1.4em;
+    font-size: 1.18em;
   }
-  
   .charts-calorie__diagram,
-  .charts-macro__diagram  {
+  .charts-macro__diagram {
     height: 400px;
   }
-
   .charts-calorie__label,
   .charts-macro__label {
     width: 50%;
     font-size: 25px;
     margin-top: 5%;
   }
-
   .charts-calorie__btn,
   .charts-macro__btn {
     width: 30%;
@@ -496,23 +485,19 @@
     font-size: 2rem;
     border-radius: 25px;
   }
-
   .charts-calorie__container,
   .charts-macro__container {
     width: 60%;
   }
-
   .charts-calorie__legend,
   .charts-macro__legend {
     bottom: 30px;
     width: 30%;
     margin-bottom: 5%;
   }
-
   .charts-macro__legend {
     margin-bottom: 10%;
   }
-
   .charts-calorie__legend-item__yellow,
   .charts-calorie__legend-item__green,
   .charts-calorie__legend-item__red,
@@ -523,22 +508,18 @@
     width: 30px;
     height: 30px;
   }
-
   .charts-calorie__legend-item > p {
     font-size: 30px;
   }
-
   .charts-macro__legend-item > p {
     font-size: 30px;
   }
-
   .charts-weight {
     width: 100%;
     height: 90%;
     margin-right: 5%;
     padding: 5%;
   }
-
   .charts-weight__actual {
     width: 60%;
     height: 10%;
@@ -555,7 +536,6 @@
   .charts-weight__remained > p {
     font-size: 2rem;
   }
-
   .charts-weight__dynamics {
     height: 350px;
     margin-top: 10%;
@@ -571,7 +551,6 @@
     height: 100%;
     font-size: 2rem;
   }
-
   .charts-form {
     width: 100%;
     padding: 5%;
@@ -581,23 +560,20 @@
   .charts-form > div {
     width: 100%;
   }
-
   .charts-form > label {
     margin-bottom: 2%;
     font-size: 20px;
   }
-
   #charts-weight-input,
   #charts-date-input {
     height: 50%;
     font-size: 2rem;
     margin-right: 5%;
   }
-
   .charts-add-weight-btn {
     width: 30%;
     height: 60%;
     font-size: 1.5rem;
     border-radius: 25px;
   }
-}
+}/*# sourceMappingURL=charts.css.map */
