--- a/assets/styles/scss/main.css
+++ b/assets/styles/scss/main.css
@@ -270,7 +270,7 @@
     font-family: "Montserrat", sans-serif;
   }
   .articles-topics__text,
-  .articles-section__article {
+.articles-section__article {
     font-weight: 300;
     font-size: calc((100vw - 160px) / 80);
     font-family: "Montserrat", sans-serif;
@@ -308,7 +308,7 @@
     font-family: "Montserrat", sans-serif;
   }
   .articles-topics__text,
-  .articles-section__article {
+.articles-section__article {
     font-weight: 300;
     font-size: calc((100vw + 475px) / 119.75);
     font-family: "Montserrat", sans-serif;
@@ -339,7 +339,7 @@
     font-family: "Montserrat", sans-serif;
   }
   .articles-section,
-  .articles-topics {
+.articles-topics {
     width: calc((100vw + 8751.3px) / 10.1);
     margin-right: calc((100vw - 2466.6px) / -7);
   }
@@ -356,7 +356,7 @@
     font-family: "Montserrat", sans-serif;
   }
   .articles-topics__text,
-  .articles-section__article {
+.articles-section__article {
     font-weight: 300;
     font-size: calc((100vw - 161.5px) / 88);
     font-family: "Montserrat", sans-serif;
@@ -388,7 +388,7 @@
     font-family: "Montserrat", sans-serif;
   }
   .articles-section,
-  .articles-topics {
+.articles-topics {
     width: calc((100vw - 246px) / 1.58);
     margin-right: calc((100vw - 5000px) / -39);
   }
@@ -862,36 +862,36 @@
     margin-top: 7%;
     margin-bottom: 5%;
     margin-left: 25%;
-    font-size: calc((100vw + 3410px) / 213);
+    font-size: 28px;
     padding: 2% 2% 1%;
     border-radius: 30px;
   }
   .charts-title > p {
-    font-size: 1.4em;
+    font-size: 1.18em;
   }
   .charts-calorie__diagram,
-  .charts-macro__diagram {
+.charts-macro__diagram {
     height: 400px;
   }
   .charts-calorie__label,
-  .charts-macro__label {
+.charts-macro__label {
     width: 50%;
     font-size: 25px;
     margin-top: 5%;
   }
   .charts-calorie__btn,
-  .charts-macro__btn {
+.charts-macro__btn {
     width: 30%;
     height: 15%;
     font-size: 2rem;
     border-radius: 25px;
   }
   .charts-calorie__container,
-  .charts-macro__container {
+.charts-macro__container {
     width: 60%;
   }
   .charts-calorie__legend,
-  .charts-macro__legend {
+.charts-macro__legend {
     bottom: 30px;
     width: 30%;
     margin-bottom: 5%;
@@ -900,12 +900,12 @@
     margin-bottom: 10%;
   }
   .charts-calorie__legend-item__yellow,
-  .charts-calorie__legend-item__green,
-  .charts-calorie__legend-item__red,
-  .charts-calorie__legend-item__salad,
-  .charts-macro__legend-item__yellow,
-  .charts-macro__legend-item__green,
-  .charts-macro__legend-item__red {
+.charts-calorie__legend-item__green,
+.charts-calorie__legend-item__red,
+.charts-calorie__legend-item__salad,
+.charts-macro__legend-item__yellow,
+.charts-macro__legend-item__green,
+.charts-macro__legend-item__red {
     width: 30px;
     height: 30px;
   }
@@ -934,7 +934,7 @@
     margin-top: 15%;
   }
   .charts-weight__dropped > p,
-  .charts-weight__remained > p {
+.charts-weight__remained > p {
     font-size: 2rem;
   }
   .charts-weight__dynamics {
@@ -966,7 +966,7 @@
     font-size: 20px;
   }
   #charts-weight-input,
-  #charts-date-input {
+#charts-date-input {
     height: 50%;
     font-size: 2rem;
     margin-right: 5%;
@@ -1122,7 +1122,6 @@ body {
   transform-origin: 50% 50%;
 }
 
-
 .diary-table-string-2 {
   width: 70%;
   font-size: 16px;
@@ -1238,17 +1237,17 @@ body {
     width: 45vw;
   }
   .diary-water-tracker__text,
-  .diary-water-tracker__top-bar-name,
-  .diary-table-string__meal-name,
-  .diary-diet-tracker__calendar-btn {
+.diary-water-tracker__top-bar-name,
+.diary-table-string__meal-name,
+.diary-diet-tracker__calendar-btn {
     font-size: 1.5vw;
   }
   .diary-table-string__column-names {
     font-size: 1vw;
   }
   .diary-water-tracker__crrnt-res,
-  .diary-water-tracker__top-res,
-  .diary-water-tracker__crrnt-res-ml {
+.diary-water-tracker__top-res,
+.diary-water-tracker__crrnt-res-ml {
     font-size: 1.6vw;
   }
 }
@@ -1268,17 +1267,17 @@ body {
     margin: auto;
   }
   .diary-water-tracker__text,
-  .diary-water-tracker__top-bar-name,
-  .diary-table-string__meal-name,
-  .diary-diet-tracker__calendar-btn {
+.diary-water-tracker__top-bar-name,
+.diary-table-string__meal-name,
+.diary-diet-tracker__calendar-btn {
     font-size: 1.2vw;
   }
   .diary-table-string__column-names {
     font-size: 1vw;
   }
   .diary-water-tracker__crrnt-res,
-  .diary-water-tracker__top-res,
-  .diary-water-tracker__crrnt-res-ml {
+.diary-water-tracker__top-res,
+.diary-water-tracker__crrnt-res-ml {
     font-size: 1.6vw;
   }
 }
@@ -1835,20 +1834,20 @@ input:hover {
     font-family: "Montserrat", sans-serif;
   }
   .profile-RSK__form-attribute,
-  .profile-paternity {
+.profile-paternity {
     font-weight: 300;
     font-size: calc((100vw + 1760px) / 160);
     font-family: "Montserrat", sans-serif;
   }
   .profile-RSK__form-input,
-  .profile-welcome__form-input {
+.profile-welcome__form-input {
     font-weight: 300;
     font-size: calc((100vw + 1440px) / 160);
     font-family: "Montserrat", sans-serif;
   }
   .profile-RSK__form-button,
-  .profile-welcome__form-button,
-  .profile-welcome__button-reg {
+.profile-welcome__form-button,
+.profile-welcome__button-reg {
     font-weight: 600;
     font-size: calc((100vw + 1760px) / 160);
     font-family: "Montserrat", sans-serif;
@@ -1874,7 +1873,7 @@ input:hover {
     font-size: calc((100vw + 160px) / 80);
   }
   .profile-user__date h2,
-  .profile-user__kkal-amount {
+.profile-user__kkal-amount {
     font-size: calc((100vw - 106px) / 53);
   }
   .profile-user__date-value {
@@ -1924,20 +1923,20 @@ input:hover {
     font-family: "Montserrat", sans-serif;
   }
   .profile-RSK__form-attribute,
-  .profile-paternity {
+.profile-paternity {
     font-weight: 300;
     font-size: 20px;
     font-family: "Montserrat", sans-serif;
   }
   .profile-RSK__form-input,
-  .profile-welcome__form-input {
+.profile-welcome__form-input {
     font-weight: 300;
     font-size: 18px;
     font-family: "Montserrat", sans-serif;
   }
   .profile-RSK__form-button,
-  .profile-welcome__form-button,
-  .profile-welcome__button-reg {
+.profile-welcome__form-button,
+.profile-welcome__button-reg {
     font-weight: 600;
     font-size: 20px;
     font-family: "Montserrat", sans-serif;
@@ -1977,20 +1976,20 @@ input:hover {
     font-family: "Montserrat", sans-serif;
   }
   .profile-RSK__form-attribute,
-  .profile-paternity {
+.profile-paternity {
     font-weight: 300;
     font-size: calc((100vw - 40px) / 94);
     font-family: "Montserrat", sans-serif;
   }
   .profile-RSK__form-input,
-  .profile-welcome__form-input {
+.profile-welcome__form-input {
     font-weight: 300;
     font-size: calc((100vw + 70px) / 110);
     font-family: "Montserrat", sans-serif;
   }
   .profile-RSK__form-button,
-  .profile-welcome__form-button,
-  .profile-welcome__button-reg {
+.profile-welcome__form-button,
+.profile-welcome__button-reg {
     font-weight: 600;
     font-size: calc((100vw - 211px) / 85);
     font-family: "Montserrat", sans-serif;
@@ -2005,23 +2004,23 @@ input:hover {
     font-family: "Montserrat", sans-serif;
   }
   .profile-user__data-name,
-  .profile-user__states-name,
-  .profile-user__kkal-amount,
-  .profile-user__water-amount {
+.profile-user__states-name,
+.profile-user__kkal-amount,
+.profile-user__water-amount {
     font-size: calc((100vw + 365px) / 91);
   }
   .profile-user__data-age {
     font-size: calc((100vw - 457px) / 91);
   }
   .profile-user__states-value,
-  .profile-user__date h2 {
+.profile-user__date h2 {
     font-size: calc((100vw + 365px) / 91);
   }
   .profile-user__date-value {
     font-size: calc((100vw + 91px) / 91);
   }
   .profile-user__kkal-name,
-  .profile-user__macro-block h3 {
+.profile-user__macro-block h3 {
     font-size: calc((100vw - 91px) / 91);
   }
   .profile-user__macro-amount_span {
