--- a/assets/styles/scss/pages/diary.scss
+++ b/assets/styles/scss/pages/diary.scss
@@ -202,9 +202,11 @@ body {
 //     display: none;
 //     transition: 1s;
 // }
-
+.diary-table-string-1__column-names,
 .diary-table-string__column-names{
     align-items: center;
+    width: 45vw;
+    font-size: 1vw;
 }
 
 //////////////////////////////////////////////////
@@ -317,10 +319,6 @@ body {
         }
     }
 
-    .diary-table-string__column-names {
-        width: 45vw;
-    }
-
     .diary-water-tracker__text,
     .diary-water-tracker__top-bar-name,
     .diary-table-string__meal-name,
@@ -328,9 +326,6 @@ body {
         font-size: 1.5vw;
     }
 
-    .diary-table-string__column-names {
-        font-size: 1vw;
-    }
 
     .diary-water-tracker__crrnt-res,
     .diary-water-tracker__top-res,
@@ -363,10 +358,6 @@ body {
     .diary-table-string__meal-name,
     .diary-diet-tracker__calendar-btn {
         font-size: 1.2vw;
-    }
-
-    .diary-table-string__column-names {
-        font-size: 1vw;
     }
 
     .diary-water-tracker__crrnt-res,
