--- a/assets/styles/scss/pages/registration.css
+++ b/assets/styles/scss/pages/registration.css
@@ -106,4 +106,9 @@
   font-weight: 300;
   font-size: calc((100vw + 1440px) / 160);
   line-height: 30px;
+}
+
+#registration__submit:hover {
+  transition-duration: 1s;
+  background-color: #f7a337;
 }/*# sourceMappingURL=registration.css.map */
