--- a/assets/styles/scss/layouts/side-bar.css
+++ b/assets/styles/scss/layouts/side-bar.css
@@ -35,6 +35,10 @@
   width: 100%;
   list-style-type: none;
 }
+.side-bar nav li:hover {
+  transition-duration: 0.3s;
+  transform: scale(1.05);
+}
 
 .side-bar__link {
   display: flex;
@@ -44,10 +48,6 @@
   width: 100%;
   text-decoration: none;
   color: white;
-}
-.side-bar__link :hover {
-  transition-duration: 0.6s;
-  margin-left: 20%;
 }
 .side-bar__link img {
   width: 67%;
