--- a/assets/styles/scss/pages/index.scss
+++ b/assets/styles/scss/pages/index.scss
@@ -109,6 +109,7 @@ button {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    align-items: center;
 
     height: 50%;
 }
@@ -119,16 +120,18 @@ button {
     justify-content: space-between;
 
     height: 80%;
+    width: 90%;
 }
 
 .profile-RSK__form-element {
     display: flex;
     align-items: center;
+    justify-content: space-between;
 }
 
-.profile-RSK__form-attribute {
-    padding-right: 3%;
-}
+// .profile-RSK__form-attribute {
+//     padding-right: 3%;
+// }
 
 .profile-RSK__form-input {
     width: 60%;
